--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Mauro Bassini. It uses data from weatherstack.com and positionstack.com</p>
             <img class="portrait" src="/img/profile_picture.jpg">
         </div>
         
